--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     @font-face{font-family:'Inter';font-style:normal;font-weight:400;font-display:swap;src:local('Inter'), url("https://raw.githubusercontent.com/rsms/inter/master/docs/font-files/Inter-Regular.woff2") format('woff2')}
     @font-face{font-family:'Inter';font-style:normal;font-weight:700;font-display:swap;src:local('Inter Bold'), url("https://raw.githubusercontent.com/rsms/inter/master/docs/font-files/Inter-Bold.woff2") format('woff2')}
     :root{--indent:2rem;--bg:#f9f9fb;--fg:#111}
-    body{max-width:1024px;margin:0 auto;background:var(--bg);font-family:Inter, sans-serif}
+    body{max-width:1024px;margin:0 auto;background:var(--bg);color:var(--fg);font-family:Inter, sans-serif}
     header{padding:1rem;line-height:1.3;font-size:0.9em}
     header p{max-width:480px}
     main{margin:0 auto;line-height:2.4}
