--- a/index.html
+++ b/index.html
@@ -214,10 +214,10 @@
   </main>
   <footer>
     <a id="cc-by" href="https://creativecommons.org/licenses/by/2.0/uk/" title="Creative Commons Attribution 2.0 UK: England & Wales License">
-      <img src="http://i.creativecommons.org/l/by/2.0/uk/88x31.png" alt="Creative Commons Attribution 2.0 UK: England & Wales License">
+      <img src="https://i.creativecommons.org/l/by/2.0/uk/88x31.png" alt="Creative Commons Attribution 2.0 UK: England & Wales License">
     </a>
     <p>Stereo Calculator By Dr Nick Holliman is licensed under a Creative Commons Attribution 2.0 UK: England & Wales License.
-    <br>Based on a work at <a href="https://web.archive.org/web/20091103053637/http://www.binocularity.org/page19.php" title="binocularity.org on archive.org">http://www.binocularity.org.</a>
+    <br>Based on a work at <a href="https://web.archive.org/web/20091103053637/http://www.binocularity.org/page19.php" title="binocularity.org on archive.org">https://www.binocularity.org.</a>
   </footer>
   <script>
     calculate(); // Initial calculation
