add noscript alert

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
     <p> I was fortunate to recover this calculator from an archived backup, as the original file is now very difficult to find online.
       The original source is available at <a href="https://github.com/foxihd/stereocalc">https://github.com/foxihd/stereocalc</a>.
     </p>
+    <noscript>
+      <p role="alert">You need to enable JavaScript to run this calculator.</p>
+    </noscript>
   </header>
   <main>
     <fieldset id="calculated-stereo-camera-inter-axial">
