fix dark mode input color

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     fieldset > div{display:flex;align-items:center;margin-left:var(--indent);margin-bottom:1rem;flex-direction:row}
     label{margin-right:auto;font-size:0.9em}
     input,output{width:4rem}
-    input{border:none;text-align:right;background:none}
+    input{border:none;text-align:right;background:none;color:var(--fg)!important;}
     .info{display:grid;grid-template-columns:repeat(2, 1fr);gap:1em}
     .info label{display:block;font-weight:700;font-size:0.7em}
     .has-desc::after{display:block;line-height:1;opacity:0.6;content:attr(aria-description);font-size:0.8em}
