--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     .has-unit.si-unit-mm::after{content:'mm'}
     .has-unit.px::after{content:'px'}
     .has-unit.deg::after{content:'°'}
-    footer{background:#000;color:#fff;padding:1rem;border-radius:2ex;margin:1rem 1rem 3rem}
+    footer{background:#000;color:#fff;padding:1rem;border-radius:1ex;margin:1rem 1rem 3rem}
     footer p{margin:0;font-size:0.9em;line-height:1.4}
     #cc-by{float:right}
     #calculated-stereo-camera-inter-axial{display:flex;padding:1rem}
@@ -41,18 +41,14 @@
     #stereobase span{font-size:3rem}
     .reset-button{border:none;padding:1ex 1rem;background:var(--fg);color:var(--bg);text-transform:uppercase;letter-spacing:0.1ex;font-size:0.6em}
     @media screen and (max-width: 480px){:root{--indent:0}#calculated-stereo-camera-inter-axial{flex-direction:column}.reset-button{margin-bottom:1rem;position:fixed;bottom:0}}
-    @media (prefers-color-scheme: dark){:root{--bg:#111;--fg:#f9f9fb}}
+    @media (prefers-color-scheme: dark){:root{--bg:#111;--fg:#f9f9fb}a{color:#fa0}}
     @media (prefers-color-scheme: light){:root{--fg:#111;--bg:#f9f9fb}}
   </style>
 </head>
 <body>
   <header>
     <h1>Binocularity.org - Free Stereo Camera Calculator</h1>
-    <p> This is a recreated stereobase calculator originally developed by Dr. Nick Holliman for binocularity.org.
-      The original website is no longer active and can only be accessed through <a href="https://web.archive.org/web/20091103053637/http://www.binocularity.org/page19.php" title="binocularity.org on archive.org">archive.org</a>.
-      This calculator is widely regarded as one of the most effective tools for stereobase calculations.
-    </p>
-    <p> I was fortunate to recover this calculator from an archived backup, as the original file is now very difficult to find online.
+    <p> This is a recreated stereoscopic camera calculator originally developed by Prof. Nick Holliman for binocularity.org.
       The original source is available at <a href="https://github.com/foxihd/stereocalc">https://github.com/foxihd/stereocalc</a>.
     </p>
     <noscript>
@@ -219,7 +215,7 @@
     <a id="cc-by" href="https://creativecommons.org/licenses/by/2.0/uk/" title="Creative Commons Attribution 2.0 UK: England & Wales License">
       <img src="https://i.creativecommons.org/l/by/2.0/uk/88x31.png" alt="Creative Commons Attribution 2.0 UK: England & Wales License">
     </a>
-    <p>Stereo Calculator By Dr Nick Holliman is licensed under a Creative Commons Attribution 2.0 UK: England & Wales License.
+    <p>Stereo Calculator By Prof. Nick Holliman is licensed under a Creative Commons Attribution 2.0 UK: England & Wales License.
     <br>Based on a work at <a href="https://web.archive.org/web/20091103053637/http://www.binocularity.org/page19.php" title="binocularity.org on archive.org">https://www.binocularity.org.</a>
   </footer>
   <script>
