--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <meta name="keywords" content="stereobase, 3d, stereoscopy">
   <meta name="author" content="@foxihd on github">
   <title>Stereo Camera Calculator by Binocularity.org</title>
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="Stereo Camera Calculator" />
   <link rel="manifest" href="/site.webmanifest" />
   <script>
     if ("serviceWorker" in navigator) {
