add links to original author

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <body>
   <header>
     <h1>Binocularity.org - Free Stereo Camera Calculator</h1>
-    <p> This is a recreated stereoscopic camera calculator originally developed by Prof. Nick Holliman for binocularity.org.
+    <p> This is a recreated stereoscopic camera calculator originally developed by Prof. Nick Holliman for <a href="https://binocularity.org" target="_blank" rel="noopener noreferrer">Binocularity.org</a>.
       The original source is available at <a href="https://github.com/foxihd/stereocalc">https://github.com/foxihd/stereocalc</a>.
     </p>
     <noscript>
